--- a/css/style.css
+++ b/css/style.css
@@ -1057,3 +1057,15 @@ fieldset {
 #price {
   margin-bottom: 15px;
 }
+
+.error-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  padding: 10px 3px;
+  font-size: 30px;
+  text-align: center;
+  background-color: red;
+  z-index: 100;
+}
